@@ -75,6 +75,7 @@ Changes
     recommended to provide format strings using the new python format syntax,
     the old %-based syntax is still available but will be deprecated.
     (PR #944)
+  * Analysis.rms.RMSD now confirms to standard analysis API (Issue #893)
 
 Deprecations (Issue #599)
   * Use of rms_fit_trj deprecated in favor of AlignTraj class (Issue #845)
